# SessionAuth

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/api/rest/: Dockerfile  main.py
src/api/rest/dependencies/: email_code_service.py  unitofwork.py
src/application/code/enums/: email_code_type.py
src/application/code/exceptions/: code_expired.py  code_invalid.py  code_not_found.py
src/application/code/interfaces/: email_code_service.py
src/application/code/services/: email_code.py  email_code_service.py
src/application/code/utils/: key_formater.py
src/application/session/dto/: session.py
src/application/session/exceptions/: session_expired.py  session_not_found.py  session_not_valid.py
src/application/session/interfaces/: session_service.py
src/application/session/services/: session_service.py
src/application/utils/: iunitofwork.py
src/config/: __init__.py  settings.py
src/infrastructure/database/: __init__.py  base.py  connext.py
src/infrastructure/redis/: connext.py
src/infrastructure/services/: cryptography.py  email_service.py
src/infrastructure/utils/: email_schemas.py  unitofwork.py
src/services/email/: Dockerfile  main.py
src/shared/domain/: entity.py
src/shared/exceptions/: already_exist.py  not_found.py
tests/: conftest.py  env_config.py
tests/fixtures/: clients.py  database.py  database_fixture.py  redis_fixture.py
tests/integration/: test_auth.py
tests/mocks/: email_sender.py  email_service.py
tests/overrides/: dependency_overrides.py  email_code_service.py
(+42 files in other folders)
