[tool.poetry]
name = "sessionauth"
version = "0.1.0"
description = ""
authors = ["Roman505050 <myhun59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
bcrypt = "^4.2.0"
aio-pika = "^9.4.3"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
aiosmtplib = "^3.0.2"
user-agents = "^2.2.0"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.2"
black = "^24.8.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
